--- a/style.css
+++ b/style.css
@@ -10,12 +10,12 @@ html {
   width: 100%;
   font-size: clamp(14px, 1vw, 18px);
   padding: 2rem;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body h1 {
   font-size: 4rem;
   color: rgb(226, 87, 110);
-  font-family: cursive;
   text-align: center;
 }
 body h1 span {
@@ -34,6 +34,9 @@ main .section {
   align-items: center;
   gap: 0.6rem;
 }
+#form {
+  display: none;
+}
 main .section .buttons {
   display: flex;
   flex-direction: column;
@@ -50,6 +53,16 @@ main .section .buttons h4 {
   font-weight: 800;
   border-radius: 50%;
   text-align: center;
+}
+
+.no-cards-message {
+  text-align: center;
+  font-size: 1.5rem;
+  color: rgb(226, 87, 110);
+  padding: 2rem;
+  background-color: rgb(246, 234, 234);
+  border-radius: 15px;
+  box-shadow: 5px 5px 15px rgba(239, 38, 38, 0.3);
 }
 
 .container {
@@ -83,7 +96,6 @@ main .section .buttons h4 {
 }
 .box h1 {
   margin-top: 0.3rem;
-  font-family: cursive;
   font-size: 1.7rem;
 }
 .box .details {
@@ -92,7 +104,6 @@ main .section .buttons h4 {
   align-content: center;
   margin-top: 0.3rem;
   padding: 0.6rem;
-  font-family: cursive;
   color: rgb(241, 82, 108);
 }
 .box .details .town {
@@ -146,7 +157,6 @@ main .section .buttons h4 {
   border-radius: 10px;
   box-shadow: 5px 5px 10px rgba(241, 82, 108, 0.3);
   width: 350px;
-  font-family: cursive;
   display: none;
 }
 
